--- a/book.bib
+++ b/book.bib
@@ -954,6 +954,16 @@ year = {1999}
   publisher={Oxford University Press}
 }
 
+@article{mikus2018,
+  title={Predicting short term mood developments among depressed patients using adherence and ecological momentary assessment data},
+  author={Mikus, Adam and Hoogendoorn, Mark and Rocha, Artur and Gama, Joao and Ruwaard, Jeroen and Riper, Heleen},
+  journal={Internet interventions},
+  volume={12},
+  pages={105--110},
+  year={2018},
+  publisher={Elsevier}
+}
+
 @Article{Moore2016,
   author        = {Moore, Raeanne C. and Depp, Colin A. and Wetherell, Julie Loebach and Lenze, Eric J.},
   title         = {{Ecological momentary assessment versus standard assessment instruments for measuring mindfulness, depressed mood, and anxiety among older adults}},
@@ -1125,6 +1135,17 @@ year = {1999}
   year={2018},
   publisher={Elsevier}
 }
+
+@article{rocha2018,
+  title={Using multi-relational data mining to discriminate blended therapy efficiency on patients based on log data},
+  author={Rocha, Artur and Camacho, Rui and Ruwaard, Jeroen and Riper, Heleen},
+  journal={Internet interventions},
+  volume={12},
+  pages={176--180},
+  year={2018},
+  publisher={Elsevier}
+}
+
 
 @article{Roenneberg2003,
   title={Life between clocks: aDily temporal patterns of human chronotypes},
@@ -1403,6 +1424,14 @@ year = {1999}
   organization={IEEE}
 }
 
+@inproceedings{vanBreda2016_exploring,
+  title={Exploring and comparing machine learning approaches for predicting mood over time},
+  author={van Breda, Ward and Pastor, Johnno and Hoogendoorn, Mark and Ruwaard, Jeroen and Asselbergs, Joost and Riper, Heleen},
+  booktitle={International Conference on Innovation in Medicine and Healthcare},
+  pages={37--47},
+  year={2016},
+  organization={Springer}
+}
 
 @Article{VanderKrieke2015,
   author = {van der Krieke, Lian and Emerencia, C. Ando and Bos, H. Elisabeth and Rosmalen, GM Judith and Riese, Harri{\"e}tte and Aiello, Marco and Sytema, Sjoerd and de Jonge, Peter}, 
@@ -1430,18 +1459,7 @@ year = {1999}
   url     = {http://www.pnas.org/cgi/doi/10.1073/pnas.1312114110},
 }
 
-@Article{VandeVen2017,
-  author          = {van de Ven, Pepijn and O'Brien, Hugh and Henriques, Ricardo and Klein, Michel and Msetfi, Rachel and Nelson, John and Rocha, Artur and Ruwaard, Jeroen and O'Sullivan, Donal and Riper, Heleen},
-  title           = {{ULTEMAT: A mobile framework for smart ecological momentary assessments and interventions}},
-  journal         = {Internet Interventions},
-  year            = {2017},
-  volume          = {9},
-  pages           = {74--81},
-  issn            = {22147829},
-  doi             = {10.1016/j.invent.2017.07.001},
-  keywords        = {Context awareness,EMA,Experience sampling,In the moment assessments},
-  mendeley-groups = {NEW},
-}
+
 
 @article{Rijsbergen2012,
   author = {Rijsbergen, Gerard D Van and Bockting, Claudi L H and Berking, Matthias and   Koeter, Maarten W J and Schene, Aart H},
@@ -1468,6 +1486,18 @@ year = {1999}
 
 
 
+@Article{VandeVen2017,
+  author          = {van de Ven, Pepijn and O'Brien, Hugh and Henriques, Ricardo and Klein, Michel and Msetfi, Rachel and Nelson, John and Rocha, Artur and Ruwaard, Jeroen and O'Sullivan, Donal and Riper, Heleen},
+  title           = {{ULTEMAT: A mobile framework for smart ecological momentary assessments and interventions}},
+  journal         = {Internet Interventions},
+  year            = {2017},
+  volume          = {9},
+  pages           = {74--81},
+  issn            = {22147829},
+  doi             = {10.1016/j.invent.2017.07.001},
+  keywords        = {Context awareness,EMA,Experience sampling,In the moment assessments},
+  mendeley-groups = {NEW},
+}
 
 @article{VanHeest2014,
   title = {Autocalibration of accelerometer data for free-living physical activity assessment using local gravity and temperature: An evaluation on four continents},
